<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/work_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <RadioGroup
            android:id="@+id/radio_blur_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_work_type"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_periodic_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodic_work" />

            <RadioButton
                android:id="@+id/radio_one_time_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_time_work" />

            <RadioButton
                android:id="@+id/radio_immediate_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immediate_work" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/destinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </RadioGroup>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_work"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>